--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/stufooks/fruit-fight#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.7"
   }
 }
